Modificacion de foto tipo banner

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 </head>
 
 <body>
+
+	<img width="1250" height="400" src="frutas01.jpg " <br>
+
 	<h1>Lista de Frutas</h1>
+
 	<p><strong> Frutas Master </strong> es una empresa familiar de tercera generación que se dedica a la compra, venta y distribución de frutas al por mayor. <br> En la actualidad, somos la empresa líder en el servicio de distribución de frutas.</p>
 
-	<img width="100" height="50" src="frutas01.jpg " /<br>
-	<img width="100" height="50" src="frutas01.jpg " />
+	
 	
 	<p><strong>Catálogo:</strong></p>
 
@@ -30,7 +33,7 @@
     </p>
 	
 	
-    <script src="assets/js/javascript.js"</script>
+    <script src="assets/js/javascript.js"></script>
 
     
 </body>
