--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 <body>
 
-	<img width="1250" height="400" src="frutas01.jpg " <br>
+	<img width="1250" height="400" src="frutas01.jpg "/> <br>
 
 	<h1>Lista de Frutas</h1>
 
-	<p><strong> Frutas Master </strong> es una empresa familiar de tercera generación que se dedica a la compra, venta y distribución de frutas al por mayor. <br> En la actualidad, somos la empresa líder en el servicio de distribución de frutas.</p>
+	<p>	<strong> Frutas Master </strong> es una empresa familiar de tercera generación que se dedica a la compra, venta y distribución de frutas al por mayor. <br> En la actualidad, somos la empresa líder en el servicio de distribución de frutas.</p>
 
 	
 	
@@ -19,17 +19,17 @@
 
 	<ol>
 
-	<li> Manzana </li>
-	<li> Pera </li>
-	<li> Piña </li>
-	<li> Cereza </li>
-	<li> Naranja </li>
+		<li> Manzana </li>
+		<li> Pera </li>
+		<li> Piña </li>
+		<li> Cereza </li>
+		<li> Naranja </li>
 
 	</ol>
 
 	<p>
-      <input type="number" id="frutas" />
-      <input type="button" value="Agregar" id="agregar" />
+      	<input type="number" id="frutas" />
+      	<input type="button" value="Agregar" id="agregar" />
     </p>
 	
 	
